--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -52,3 +52,43 @@
     {% endif %}
   </div>
 {% endif %}
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 500px;
+  /* background-color: #f1f1f1; */
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<!-- <h2>Vertical Navigation Bar</h2> -->
+
+<ul>
+  <li><a href="#home"><h1>Home</h1></a></li>
+  <li><a href="#blogs"><h1>Blogs</h1></a></li>
+  <li><a href="#projects"><h1>Projects</h1></a></li>
+  <li><a href="#contact"><h1>Contact</h1></a></li>
+</ul>
+
+</body>
+</html>
