--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
           </div>
         {% endunless %}
 
-        {% include projects.html %}
+        <!-- {% include projects.html %} -->
 
         {% if site.topics %}
           {% include interests.html %}
