--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,9 +1,58 @@
-<h1 {% if site.style == 'dark' %}class="text-white"{% endif %}>Ciao !</h1>
-<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/tʃaʊ/</p>
-<div class="d-flex flex-wrap gutter-condensed mb-4">
-  {% for topic in site.topics %}
-    <div class="col-6 col-md-12 col-lg-6 col-xl-4 mb-3">
-      {% include topic-card.html %}
-    </div>
-  {% endfor %}
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+p.small {
+  font-variant: normal;
+  font-size: 20px;
+}
+
+a:link, a:visited {
+  display: block;
+  color: #000;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  background: white;
+
+  /* "to left" / "to right" - affects initial color */
+  background: linear-gradient(to left, white 50%, black 50%) right;
+  background-size: 200%;
+  transition: .5s ease-out;
+}
+
+a:hover, a:active {
+  background-position: left;
+  /* background-color: #555; */
+  color: white;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+</style>
+</head>
+<body>
+
+  <h1 {% if site.style == 'dark' %}class="text-white"{% endif %}>Ciao !</h1>
+  <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/tʃaʊ/</p>
+  <p class="small">
+    I'm Sanket, an aspiring researcher working in the domain of Deep Learning, Computer Vision and Machine Learning with a focus on Multi Modal
+    Deep learning. I prefer Tabs over spaces. I am currently a PhD student at PAVIS, Italian Institute of Technology under the supervision of Dr. Alessio Del Bue.
+
+
+    Previously, I have worked with <a href=""#bell_labs">Nokia Bell Labs</a> ,  <a href="#smartvizx">SmartVizx</a> , <a href="#EY">Ernst and Young</a>  with their research
+    department. Besides, I also had two startups in my college and have had two provisional patents. I have also been an active participant in technical communities and
+    presented multiple techincal talks and workshops at various level(s).
+  </p>
+  <div class="d-flex flex-wrap gutter-condensed mb-4">
+    {% for topic in site.topics %}
+      <div class="col-6 col-md-12 col-lg-6 col-xl-4 mb-3">
+        {% include topic-card.html %}
+      </div>
+    {% endfor %}
+  </div>
+
+</body>
+</html>
