--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -130,7 +130,7 @@ a:hover, a:active {
 <img src="{{ user.avatar_url }}" class="circle mb-3" style="max-width: 150px;">
 <h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 lh-condensed">{% if user.name %}{{ user.name }}{% else %}{{ user.login }}{% endif %}</h1>
 <p class="small">
-  PhD student at <a href="https://pavis.iit.it"><u>PAVIS, IIT<u></a>
+  PhD student at <a href="https://pavis.iit.it"><u>PAVIS, IIT</u></a>
 </p>
 
 <div class="Navigation bar">
