Adjusted the margins and customised layout

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -40,11 +40,11 @@ h1.thicker{
 </head>
 <body>
 
-  <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Ciao !</h1>
-  <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/tʃaʊ/</p>
+  <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Contatto !</h1>
+  <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">con·tàt·to</p>
   <p class="small">
     I'm Sanket, an aspiring researcher working in the domain of Deep Learning, Computer Vision and Machine Learning with a focus on Multi Modal
-    Deep learning. I am currently a PhD student at PAVIS, Italian Institute of Technology under the supervision of Dr. Alessio Del Bue.
+    Deep learning. I prefer Tabs over spaces. I am currently a PhD student at PAVIS, Italian Institute of Technology under the supervision of Dr. Alessio Del Bue.
   </p>
   <p class="small">
 
@@ -53,12 +53,6 @@ h1.thicker{
     presented multiple techincal talks and workshops at various level(s).
   </p>
 
-  <p class="small">
-    I am also trying to get into open source, particularly focusing on computer vision based modules.
-    <h3>PS: I am still updating this site, few commits a day. </h3>
-
-    <p class="small" style:"float; left;"><img src="claim_sign.png" alt="claim_sign" width="15" height="15" border="1px">  This claim is disputed</p>
-  </p>
   <!-- <div class="d-flex flex-wrap gutter-condensed mb-4">
     {% for topic in site.topics %}
       <div class="col-6 col-md-12 col-lg-6 col-xl-4 mb-3">
