--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -68,12 +68,14 @@ ul {
   margin: 0;
   padding: 0;
   width: 500px;
+  margin-top: 50px;
 
   /* background-color: #f1f1f1; */
 }
 
 li a {
   display: block;
+  margin-top: 10px;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
@@ -112,7 +114,7 @@ a:link, a:visited {
   transition: .5s ease-out;
 }
 
-a:hover, a:active {
+li a.active {
   background-position: left;
   /* background-color: #555; */
   color: white;
@@ -133,14 +135,17 @@ a:hover, a:active {
   PhD student at <a href="https://pavis.iit.it"><u>PAVIS, IIT</u></a>
 </p>
 
-<div class="Navigation bar">
-  <ul>
-    <li class="active"><a href="#home"><h2>home</h2></a></li>
-    <li><a href="#post"><h2>blogs</h2></a></li>
-    <li><a href="#projects"><h2>projects</h2></a></li>
-    <li><a href="#contact"><h2>contact</h2></a></li>
-  </ul>
+<div id="navBar">
+  <nav>
+    <ul>
+      <li><a class="active" href="#home"><h2>home</h2></a></li>
+      <li><a href="#post"><h2>blogs</h2></a></li>
+      <li><a href="#projects"><h2>projects</h2></a></li>
+      <li><a href="#contacts" target="_self"><h2>contact</h2></a></li>
+    </ul>
+  </nav>
 </div>
+
 
 </body>
 </html>
