Added post page

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -38,7 +38,7 @@ h1.thicker{
 
 </style>
 </head>
-<body>
+<body id="home">
 
   <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Ciao !</h1>
   <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/tʃaʊ/</p>
