--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -136,12 +136,12 @@ li a.active {
 </p>
 
 <div id="navBar">
-  <nav>
+  <nav class="main_nav">
     <ul>
-      <li><a class="active" href="#home"><h2>home</h2></a></li>
-      <li><a href="#post"><h2>blogs</h2></a></li>
+      <li><a class="active" href="/"><h2>home</h2></a></li>
+      <li><a href="{{'/thoughts.html'|absolute_url}}"><h2>blogs</h2></a></li>
       <li><a href="#projects"><h2>projects</h2></a></li>
-      <li><a href="#contacts" target="_self"><h2>contact</h2></a></li>
+      <li ><a href="{{'contact.html'|absolute_url}}"><h2>contact</h2></a></li>
     </ul>
   </nav>
 </div>
