--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -139,7 +139,7 @@ li a.active {
   <nav class="main_nav">
     <ul>
       <li><a class="active" href="/"><h2>home</h2></a></li>
-      <li><a href="{{'/thoughts.html'|absolute_url}}"><h2>blogs</h2></a></li>
+      <li><a href="thoughts.html"><h2>blogs</h2></a></li>
       <li><a href="#projects"><h2>projects</h2></a></li>
       <li ><a href="{{'contact.html'|absolute_url}}"><h2>contact</h2></a></li>
     </ul>
