Removed the sidebar and background

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -133,6 +133,8 @@ li a.active {
 <h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 lh-condensed">{% if user.name %}{{ user.name }}{% else %}{{ user.login }}{% endif %}</h1>
 <p class="small">
   PhD student at <a href="https://pavis.iit.it"><u>PAVIS, IIT</u></a>
+
+  <br><span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">sanketsans</span>
 </p>
 
 <div id="navBar">
@@ -143,7 +145,7 @@ li a.active {
       <!-->
       <li ><a class="active" href="{{site.baseurl}}/"><h2>home</h2></a></li>
       <li ><a href="{{site.baseurl}}/blogs"><h2>blogs</h2></a></li>
-      <li ><a href="{{site.baseurl}}/projects"><h2>projects</h2></a></li>
+      <!-- <li ><a href="{{site.baseurl}}/projects"><h2>projects</h2></a></li> -->
       <li ><a href="{{site.baseurl}}/contacts"><h2>contact</h2></a></li>
     </ul>
   </nav>
