Modified nav bar orientation

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -32,15 +32,16 @@ a:hover, a:active {
 }
 
 h1.thicker{
-  font: 55px Arial, sans-serif;
+  font: 85px Arial, sans-serif;
   font-weight: 800;
+  margin-top: 50px;
 }
 
 </style>
 </head>
 <body id="home">
 
-  <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Ciao !</h1>
+  <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}" margin-top="15px">Ciao !</h1>
   <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/tʃaʊ/</p>
   <p class="small">
     I'm Sanket, an aspiring researcher working in the domain of Deep Learning, Computer Vision and Machine Learning with a focus on Multi Modal
