--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,11 @@
 {% include header.html %}
-
+<style>
+  h1.thicker{
+    font: 85px Arial, sans-serif;
+    font-weight: 800;
+    margin-top: 50px;
+  }
+</style>
 {% if site.layout == 'stacked' %}
   <div class="container-lg py-6 p-responsive text-center">
     {% include masthead.html metadata=false %}
@@ -12,16 +18,16 @@
   </div>
 {% else %}
   <div class="d-md-flex min-height-full {% unless site.style == 'dark' %}border-md-bottom{% endunless %}">
-    <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %} bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
+    <div class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %} bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6" style="margin-left:175px;">
       {% include masthead.html metadata=true %}
     </div>
 
-    <div class="col-md-7 col-lg-8 col-xl-9 px-4 py-6 px-lg-7 border-top " {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
+    <div class="col-md-7 col-lg-8 col-xl-6 px-4 py-6 px-lg-7 border-top " {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
       <div class="mx-auto" style="max-width: 900px;">
         <div class="f4 {% if site.style == 'dark' %}text-white{% endif %} mb-6">
           <div class="f4 {% if site.style == 'dark' %}text-white{% endif %}">
             <!-- <p class="f5"><a href="{{ site.url }}{{ site.baseurl | append:'/' }}" class="d-flex flex-items-center {% if site.style == 'dark' %}text-white{% endif %}">{% octicon chevron-left height:16 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Home %}Home</a></p> -->
-            <h1 class="f00-light lh-condensed mb-5">{{ page.title }}</h1>
+            <h1 class="thicker">{{ page.title }}</h1>
             {{ content }}
           </div>
         </div>
