fixed alignment issue

--- a/_layouts/blogs.html
+++ b/_layouts/blogs.html
@@ -14,11 +14,10 @@
 
 <style>
   h1.thicker{
-  font: 400% Arial, sans-serif;
-  font-weight: 800;
-  margin-top: 10%;
+    font: 85px Arial, sans-serif;
+    font-weight: 800;
+    margin-top: 10%;
   }
-  
 p.first{
   margin-top: 10%;
         }
@@ -143,74 +142,74 @@ li a.active {
 </html>
 </div>
 
-<!-- <div class="mx-auto" style="max-width: 100%; padding-right:10%"> -->
   <div class="col-md-7 col-lg-8 col-xl-6 px-4 py-6 px-lg-7 border-top " >
-  <div class="mx-auto" style="max-width: 100%; padding-right:10%">
+  <div div class="mx-auto" style="max-width: 100%; padding-right:10%">
     <div class="f4  mb-6">
       <div class="f4 ">
-        <!-- <p class="f5"><a href="http://localhost:4000/" class="d-flex flex-items-center "><svg height="16" class="octicon octicon-chevron-left mr-2 v-align-middle" fill="#24292e" aria-label="Home" viewBox="0 0 16 16" version="1.1" width="16" role="img"><path fill-rule="evenodd" d="M9.78 12.78a.75.75 0 01-1.06 0L4.47 8.53a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L6.06 8l3.72 3.72a.75.75 0 010 1.06z"></path></svg>Home</a></p> -->
-
+        <!-- <p class="f5"><a href="http://localhost:4000/" class="d-flex flex-items-center "><svg height="16" class="octicon octicon-chevron-left mr-2 v-align-middle" fill="#24292e" aria-label="Home" viewBox="0 0 16 16" version="1.1" width="16" role="img"><path fill-rule="evenodd" d="M9.78 12.78a.75.75 0 01-1.06 0L4.47 8.53a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L6.06 8l3.72 3.72a.75.75 0 010 1.06z"></path></svg>Home</a></p>
+        <h1 class="thicker"></h1>
+      <div class="mx-auto" style="max-width: 60%;>
 <!-- /* ------------------------               About  Section            ---------------------------- */ -->
 <!DOCTYPE html>
 <html>
 <head>
 <style>
-
 p.small {
-font-variant: normal;
-font-size: 150%;
+  font-variant: normal;
+  font-size: 150%;
 }
 
 a:link, a:visited {
-display: block;
-color: #000;
-text-decoration: none;
-display: inline-block;
-text-align: center;
-background: white;
+  display: block;
+  color: #000;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  background: white;
 
-/* "to left" / "to right" - affects initial color */
-background: linear-gradient(to left, white 50%, black 50%) right;
-background-size: 200%;
-transition: .5s ease-out;
+  /* "to left" / "to right" - affects initial color */
+  background: linear-gradient(to left, white 50%, black 50%) right;
+  background-size: 200%;
+  transition: .5s ease-out;
 }
 
 a:hover, a:active {
-background-position: left;
-/* background-color: #555; */
-color: white;
--webkit-transform: scale(1);
--ms-transform: scale(1);
-transform: scale(1);
+  background-position: left;
+  /* background-color: #555; */
+  color: white;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
 
 h1.thicker{
-font: 400% Arial, sans-serif;
-font-weight: 800;
-margin-top: 10%;
+  font: 400% Arial, sans-serif;
+  font-weight: 800;
+  margin-top: 10%;
 }
-
 </style>
-</head>
-<body id="contacts">
 
-  <h1 class= "thicker ">Contatto !</h1>
-  <p class="f4 mb-4 text-gray">con·tàt·to</p>
-  <p class="small">
-    You can reach out to me via : <br><br>
+<p class="first"></p>
+<h1 class= "thicker ">My Thoughts</h1>
+<p class="f4 mb-4 text-gray">Articles I've written.</p>
 
-  </p>
-  <p class="small">
-    Or you can directly mail me :  <a href="mailto:sanket.thakut@iit.it">sanket.thakur@iit.it</a>
-  </p>
+<h1 class="f4 lh-condensed mb-1">
+<a href="/2020/12/26/fellowship_exp/" style="padding:3%"> <h2> My experience as a ML fellow for fellowship.ai </h2></a>
+</h1>
 
-</body>
-</html>
+<div class="text-gray mb-2 ws-normal" style="margin-left:5%">Dec 26, 2020</div>
 
+<!-- <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Blog !</h1>
+<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">/blɒɡ/</p>
+<p class="small">
+  Work in progress !
+</p> -->
 
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div></div>
-</div>
 
 
   </body>
