--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,53 +15,13 @@
 
 <style>
 p.first{
-  margin-top: 70px;
+  margin-top: 10%;
         }
 </style>
 
 
 <div class="d-md-flex min-height-full border-md-bottom">
-  <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:auto; margin-right:0">
-
-
-<!-- <img src="https://avatars.githubusercontent.com/u/17062921?v=4" class="circle mb-3" style="max-width: 150px;">
-<h1 class=" mb-2 lh-condensed">Sanket Thakur</h1>
-<p class="mb-3 f4 text-gray">
-  PhD student at PAVIS, IIT working on multi-modal deep learning.
-</p> -->
-
-<!--
-  <div class="f4 mb-6">
-      <div class="d-flex flex-items-center mb-3">
-        <svg height="20" class="octicon octicon-mark-github mr-2 v-align-middle" fill="#24292e" aria-label="GitHub" viewBox="0 0 16 16" version="1.1" width="20" role="img"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
-        <a href="https://github.com/sanketsans" >
-          @sanketsans
-        </a>
-      </div>
-      <div class="d-flex flex-items-center mb-3 ">
-        <svg height="20" class="octicon octicon-location mr-2 v-align-middle" fill="#24292e" aria-label="Location" viewBox="0 0 16 16" version="1.1" width="20" role="img"><path fill-rule="evenodd" d="M11.536 3.464a5 5 0 010 7.072L8 14.07l-3.536-3.535a5 5 0 117.072-7.072v.001zm1.06 8.132a6.5 6.5 0 10-9.192 0l3.535 3.536a1.5 1.5 0 002.122 0l3.535-3.536zM8 9a2 2 0 100-4 2 2 0 000 4z"></path></svg>
-        Italy
-      </div>
-      <div class="d-flex flex-wrap flex-items-start ">
-          <div class="mr-3 mb-3">
-            <a href="https://www.linkedin.com/in/sanketsans97" class="tooltipped tooltipped-se" aria-label="LinkedIn: sanketsans97">
-              <svg height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18"><path d="M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z" fill="#959da5"/></svg><span class="d-none">LinkedIn</span>
-            </a>
-          </div>
-          <div class="mr-3 mb-3">
-            <a href="https://www.twitter.com/sanketsans97" class="tooltipped tooltipped-se" aria-label="Twitter: sanketsans97">
-              <svg height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.5 222.3"><path d="M273.5 26.3a109.77 109.77 0 0 1-32.2 8.8 56.07 56.07 0 0 0 24.7-31 113.39 113.39 0 0 1-35.7 13.6 56.1 56.1 0 0 0-97 38.4 54 54 0 0 0 1.5 12.8A159.68 159.68 0 0 1 19.1 10.3a56.12 56.12 0 0 0 17.4 74.9 56.06 56.06 0 0 1-25.4-7v.7a56.11 56.11 0 0 0 45 55 55.65 55.65 0 0 1-14.8 2 62.39 62.39 0 0 1-10.6-1 56.24 56.24 0 0 0 52.4 39 112.87 112.87 0 0 1-69.7 24 119 119 0 0 1-13.4-.8 158.83 158.83 0 0 0 86 25.2c103.2 0 159.6-85.5 159.6-159.6 0-2.4-.1-4.9-.2-7.3a114.25 114.25 0 0 0 28.1-29.1" fill="#959da5"/></svg><span class="d-none">Twitter</span>
-            </a>
-          </div>
-          <div class=" mb-3">
-            <a href="sanketsans" class="tooltipped tooltipped-se" aria-label=": sanketsans">
-              <span class="d-none"></span>
-            </a>
-          </div>
-      </div>
-      <span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">Available for hire</span>
-  </div>
- -->
+  <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:5%; margin-right:5%">
 
 <!DOCTYPE html>
 <html>
@@ -70,7 +30,7 @@ p.first{
 
 p.small {
   font-variant: small-caps;
-  font-size: 20px;
+  font-size: 150%;
 }
 
 ul {
@@ -78,8 +38,8 @@ ul {
   margin: 10%;
   margin-left: 10%;
   padding: 0;
-  width: 500px;
-  margin-top: 50px;
+  width: 50%;
+  margin-top: 20%;
 
   /* background-color: #f1f1f1; */
 }
@@ -89,7 +49,7 @@ li a {
   display: block;
   /* margin-top: 15px; */
   color: #000;
-  padding: 8px 16px;
+  padding: 2% 4%;
   text-decoration: none;
   display: inline-block;
   padding: 1em 2em;
@@ -180,7 +140,7 @@ li a.active {
 
     <!-- <div class="col-md-7 col-lg-8 col-xl-6 px-4 py-6 px-lg-7 border-top border-md-top-0 bg-white" > -->
       <!-- <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:auto; margin-right:0"> -->
-      <div class="mx-auto" style="max-width: 60%; margin-left:auto margin-right:auto">
+      <div class="mx-auto" style="max-width: 60%; padding-right:10%">
 
 <!-- /* ------------------------               About  Section            ---------------------------- */ -->
 <!DOCTYPE html>
@@ -190,7 +150,7 @@ li a.active {
 
 p.small {
   font-variant: normal;
-  font-size: 20px;
+  font-size: 150%;
 }
 
 a:link, a:visited {
@@ -217,16 +177,16 @@ a:hover, a:active {
 }
 
 h1.thicker{
-  font: 85px Arial, sans-serif;
+  font: 500% Arial, sans-serif;
   font-weight: 800;
-  margin-top: 50px;
+  margin-top: 10%;
 }
 
 </style>
 </head>
 <body id="home">
 
-  <h1 class= "thicker " margin-top="15px">Ciao !</h1>
+  <h1 class= "thicker " margin-top="5%">Ciao !</h1>
   <p class="f4 mb-4 text-gray">/tʃaʊ/</p>
   <p class="small">
     I'm Sanket, an aspiring researcher working in the domain of Deep Learning, Computer Vision and Machine Learning with a focus on Multi Modal
