--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,54 +4,28 @@
   {% assign metadata_styles = 'd-flex flex-items-center mb-3' %}
 {% endif %}
 
-<!-- <img src="{{ user.avatar_url }}" class="circle mb-3" style="max-width: 150px;">
-<h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 lh-condensed">{% if user.name %}{{ user.name }}{% else %}{{ user.login }}{% endif %}</h1>
-<p class="mb-3 f4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">
-  {{ user.bio }}
-</p> -->
+<!doctype html>
+<html class="min-height-full">
+  <head>
+    <meta charset="utf-8">
+    <title>Sanket Thakur</title>
+    <meta name="description" content="PhD student at PAVIS, IIT working on multi-modal deep learning. " />
+    <meta property="og:title" content="Sanket Thakur" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/17062921?v=4" />
+    <meta property="og:description" content="PhD student at PAVIS, IIT working on multi-modal deep learning. " />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="/assets/styles.css" rel="stylesheet" type="text/css">
+  </head>
+  <body class="bg-white min-height-full" >
 
-<!-- {% if include.metadata %}
-  <div class="f4 mb-6">
-    {% if user.name %}
-      <div class="{{ metadata_styles }}">
-        {% octicon mark-github height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:GitHub %}
-        <a href="https://github.com/{{ user.login }}" {% if site.style == 'dark' %}class="text-white"{% endif %}>
-          @{{ user.login }}
-        </a>
-      </div>
-    {% endif %}
-    {% if user.email %}
-      <div class="{{ metadata_styles }}">
-        {% octicon mail height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:email %}
-        <a href="mailto:{{ user.email }}" {% if site.style == 'dark' %}class="text-white"{% endif %}>
-          {{ user.email }}
-        </a>
-      </div>
-    {% endif %}
-    {% if user.location %}
-      <div class="{{ metadata_styles }} {% if site.style == 'dark' %}text-white{% endif %}">
-        {% octicon location height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Location %}
-        {{ user.location }}
-      </div>
-    {% endif %}
-    {% if site.social_media %}
-      <div class="d-flex flex-wrap flex-items-start {% if site.layout == 'stacked' %}flex-justify-center mt-1 mt-md-3{% endif %}">
-        {% for account in site.social_media %}
-          <div class="{% unless forloop.last == true %}mr-3{% endunless %} mb-3">
-            {% assign service_shortname = account[0] %}
-            {% assign service = site.data.social_media[service_shortname] %}
-            <a href="{{ service.profile_url_prefix }}{{ account[1] }}" class="tooltipped tooltipped-se" aria-label="{{ service.name }}: {{ account[1] }}">
-              {{ service.icon_svg }}<span class="d-none">{{ service.name }}</span>
-            </a>
-          </div>
-        {% endfor %}
-      </div>
-    {% endif %}
-    {% if user.hireable %}
-      <span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">Available for hire</span>
-    {% endif %}
-  </div>
-{% endif %} -->
+
+<style>
+p.first{
+  margin-top: 10%;
+        }
+</style>
+
+  <!-- <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:5%; margin-right:5%"> -->
 
 <!DOCTYPE html>
 <html>
@@ -60,24 +34,26 @@
 
 p.small {
   font-variant: small-caps;
-  font-size: 20px;
+  font-size: 150%;
 }
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 10%;
+  margin-left: 10%;
   padding: 0;
-  width: 500px;
-  margin-top: 50px;
+  width: 50%;
+  margin-top: 20%;
 
   /* background-color: #f1f1f1; */
 }
+
 
 li a {
   display: block;
   /* margin-top: 15px; */
   color: #000;
-  padding: 8px 16px;
+  padding: 2% 4%;
   text-decoration: none;
   display: inline-block;
   padding: 1em 2em;
@@ -86,7 +62,7 @@ li a {
 
   /* "to left" / "to right" - affects initial color */
   background: linear-gradient(to left, white 50%, black 50%) right;
-  background-size: 200%;
+  background-size: 10%;
   transition: .5s ease-out;
 }
 
@@ -130,8 +106,8 @@ li a.active {
 
 <!-- <h2>Vertical Navigation Bar</h2> -->
 
-<img src="{{ user.avatar_url }}" class="circle mb-3" style="max-width: 150px;">
-<h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 lh-condensed">{% if user.name %}{{ user.name }}{% else %}{{ user.login }}{% endif %}</h1>
+<img src="https://avatars.githubusercontent.com/u/17062921?v=4" class="circle mb-3" style="max-width: 50%;">
+<h1 class=" mb-2 lh-condensed">Sanket Thakur</h1>
 <p class="small">
   PhD student at <a href="https://pavis.iit.it"><u>PAVIS, IIT</u></a>
   <!-- <br><span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">sanketsans</span> -->
@@ -142,10 +118,11 @@ li a.active {
     <!--
       Reference was taken from https://github.com/BorealBlizzard/BorealBlizzard.github.io for link syncing
     <!-->
-    <li ><a id="mainPage" href="{{site.baseurl}}/" ><h2>home</h2></a></li>
-    <li style="margin-top:15px"><a id="blogs" href="{{site.baseurl}}/blogs" ><h2>blogs</h2></a></li>
-    <!-- <li ><a href="{{site.baseurl}}/projects"><h2>projects</h2></a></li> -->
-    <li style="margin-top:15px"><a id="contacts" href="{{site.baseurl}}/contacts" ><h2>contact</h2></a></li>
+    <li ><a id="mainPage" href="/" ><h2>home</h2></a></li>
+    <li style="margin-top:2vw"><a id="blogs" href="/blogs" ><h2>blogs</h2></a></li>
+    <!-- <li ><a href="/projects"><h2>projects</h2></a></li> -->
+    <li style="margin-top:2vw"><a id="contacts" href="/contacts" ><h2>contact</h2></a></li>
+    <li style="margin-top:2vw"><a id="papers" href="/papers" ><h2>pap series</h2></a></li>
   </ul>
 </nav>
 
@@ -164,3 +141,4 @@ li a.active {
 
 </body>
 </html>
+<!-- </div> -->
