--- a/_layouts/papers.html
+++ b/_layouts/papers.html
@@ -1,13 +1,3 @@
-
-
-
-
-
-
-
-
-
-
 <!doctype html>
 <html class="min-height-full">
   <head>
@@ -24,38 +14,19 @@
 
 <style>
   h1.thicker{
-    font: 85px Arial, sans-serif;
-    font-weight: 800;
-    margin-top: 50px;
+  font: 400% Arial, sans-serif;
+  font-weight: 800;
+  margin-top: 10%;
   }
-</style>
 
-  <div class="d-md-flex min-height-full border-md-bottom">
-    <div class="flex-self-stretch  bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6" style="margin-left:175px;">
-      
-
-<!doctype html>
-<html class="min-height-full">
-  <head>
-    <meta charset="utf-8">
-    <title>Sanket Thakur</title>
-    <meta name="description" content="PhD student at PAVIS, IIT working on multi-modal deep learning. " />
-    <meta property="og:title" content="Sanket Thakur" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/17062921?v=4" />
-    <meta property="og:description" content="PhD student at PAVIS, IIT working on multi-modal deep learning. " />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="/assets/styles.css" rel="stylesheet" type="text/css">
-  </head>
-  <body class="bg-white min-height-full" >
-
-
-<style>
 p.first{
   margin-top: 10%;
         }
 </style>
 
-  <!-- <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:5%; margin-right:5%"> -->
+
+<div class="d-md-flex min-height-full border-md-bottom">
+  <div class="flex-self-stretch bg-white col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-7" style="margin-left:5%; margin-right:5%">
 
 <!DOCTYPE html>
 <html>
@@ -171,41 +142,77 @@ li a.active {
 
 </body>
 </html>
-<!-- </div> -->
+</div>
 
-    </div>
+<!-- <div class="mx-auto" style="max-width: 100%; padding-right:10%"> -->
+  <div class="col-md-7 col-lg-8 col-xl-6 px-4 py-6 px-lg-7 border-top " >
+  <div class="mx-auto" style="max-width: 100%; padding-right:10%">
+    <div class="f4  mb-6">
+      <div class="f4 ">
+        <!-- <p class="f5"><a href="http://localhost:4000/" class="d-flex flex-items-center "><svg height="16" class="octicon octicon-chevron-left mr-2 v-align-middle" fill="#24292e" aria-label="Home" viewBox="0 0 16 16" version="1.1" width="16" role="img"><path fill-rule="evenodd" d="M9.78 12.78a.75.75 0 01-1.06 0L4.47 8.53a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L6.06 8l3.72 3.72a.75.75 0 010 1.06z"></path></svg>Home</a></p> -->
 
-    <div class="col-md-7 col-lg-8 col-xl-6 px-4 py-6 px-lg-7 border-top " >
-      <div class="mx-auto" style="max-width: 900px;">
-        <div class="f4  mb-6">
-          <div class="f4 ">
-            <!-- <p class="f5"><a href="http://localhost:4000/" class="d-flex flex-items-center "><svg height="16" class="octicon octicon-chevron-left mr-2 v-align-middle" fill="#24292e" aria-label="Home" viewBox="0 0 16 16" version="1.1" width="16" role="img"><path fill-rule="evenodd" d="M9.78 12.78a.75.75 0 01-1.06 0L4.47 8.53a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L6.06 8l3.72 3.72a.75.75 0 010 1.06z"></path></svg>Home</a></p> -->
-            <h1 class="thicker"></h1>
-            <style>
+<!-- /* ------------------------               About  Section            ---------------------------- */ -->
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
 p.small {
-  font-variant: small-caps;
-  font-size: 20px;
+font-variant: normal;
+font-size: 150%;
 }
+
+a:link, a:visited {
+display: block;
+color: #000;
+text-decoration: none;
+display: inline-block;
+text-align: center;
+background: white;
+
+/* "to left" / "to right" - affects initial color */
+background: linear-gradient(to left, white 50%, black 50%) right;
+background-size: 200%;
+transition: .5s ease-out;
+}
+
+a:hover, a:active {
+background-position: left;
+/* background-color: #555; */
+color: white;
+-webkit-transform: scale(1);
+-ms-transform: scale(1);
+transform: scale(1);
+}
+
 h1.thicker{
-  font: 55px Arial, sans-serif;
-  font-weight: 800;
+font: 400% Arial, sans-serif;
+font-weight: 800;
+margin-top: 10%;
 }
+
 </style>
+</head>
+<body id="papers">
 
-<h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Progetto !</h1>
-<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">pro·gèt·to</p>
+  <h1 class= "thicker {% if site.style == 'dark' %}class="text-white"{% endif %}">Papers Breif !</h1>
+  <!-- <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">con·tàt·to</p> -->
+  <p class="small" style="margin-top: 4%">
+    Coming soon ... <br><br>
+  </p>
+  <p class="small" style:"float; left;"><img src="/images/claim_sign.png" alt="claim_sign" width="15" height="15" border="1px">  This claim is disputed</p>
+  <!-- <p class="small">
+    Or you can directly mail me :  <a href="mailto:sanket.thakut@iit.it">sanket.thakur@iit.it</a>
+  </p> -->
 
-<p class="small">
-Work in progress
-</p>
+</body>
+</html>
 
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
+</div></div>
+</div>
 
 
   </body>
 </html>
-
